--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <div>LIVES: <span id="livesUI">3</span></div>
         </div>
         <canvas id="gameCanvas"></canvas>
+        <div id="damageOverlay"></div>
     </div>
+    
     <script src="constants.js"></script>
     <script src="class.js"></script>
     <script src="game.js"></script>
