explosion effect on game over

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
         <canvas id="gameCanvas"></canvas>
         <div id="damageOverlay"></div>
+        <img id="explosionGif" src="img/explosion.gif" style="display: none;" />
     </div>
     
     <script src="constants.js"></script>
