game over screen

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
         <div id="damageOverlay"></div>
         <img id="explosionGif" src="img/explosion.gif" style="display: none;" />
     </div>
+    <div class="gameover-container" style="display: none;">
+        <h1>GAME OVER</h1>
+        <h2>You Died!</h2>
+        <h3 id="gameOverPlayerName">PLAYER</h3>
+        <p id="gameOverScore">Your Score: 0000</p>
+        <div class="button-container">
+            <button id="playAgainButton">PLAY AGAIN</button>
+            <button id="mainMenuButton">MAIN MENU</button>
+        </div>
+    </div>    
     
     <script src="constants.js"></script>
     <script src="class.js"></script>
