ses efektleri eklenmeye baslandi

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <input id="nameInput" type="text" minlength="3" maxlength="13" required>
             <button id="startButton" type="button">START</button>
         </div>
+        <button id="toggleMusicButton">🎵 Music: ON</button>
+
     </div>
     <div class="game-container">
         <div class="ui-container">
@@ -44,5 +46,6 @@
     <script src="class.js"></script>
     <script src="game.js"></script>
     <script src="main.js"></script>
+    <script src="audio.js"></script>
 </body>
 </html>
