--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="input-container">
             <label id="nameLabel" for="nameInput">ENTER NAME</label>
             <input id="nameInput" type="text" minlength="3" maxlength="13" required>
+            <div id="nameWarning">⚠️ Name must be at least 3 characters long.</div>
             <button id="startButton" type="button">START</button>
         </div>
     </div>
