gameplay music, game over sound

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             <input id="nameInput" type="text" minlength="3" maxlength="13" required>
             <button id="startButton" type="button">START</button>
         </div>
-        <button id="toggleMusicButton">🎵 Music: ON</button>
 
     </div>
     <div class="game-container">
@@ -41,6 +40,8 @@
             <button id="mainMenuButton">MAIN MENU</button>
         </div>
     </div>    
+    <button id="toggleMusicButton" tabindex="-1" style="position: fixed; top: 20px; right: 20px; z-index: 100;">Music: ON</button>
+
     
     <script src="constants.js"></script>
     <script src="class.js"></script>
