final adjustments and player hit sound

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <button id="mainMenuButton">MAIN MENU</button>
         </div>
     </div>    
-    <button id="toggleMusicButton" tabindex="-1" style="position: fixed; top: 20px; right: 20px; z-index: 100;">Music: ON</button>
+    <button id="toggleMusicButton" tabindex="-1" style="position: fixed; top: 20px; right: 20px; z-index: 100;">Music: OFF</button>
 
     
     <script src="constants.js"></script>
