Name changed to "Byte Invaders"

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Space Invaders</title>
+    <title>Byte Invaders</title>
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.0.0/dist/ethers.umd.min.js"></script>
 
 </head>
 <body>
     <div class="start-container">
-        <h1>SPACE INVADERS</h1>
+        <h1>BYTE INVADERS</h1>
         
         <h2>BLOCKCHAIN HIGH SCORES</h2>
         <ol id="blockchainScores"></ol>
