power-ups added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <canvas id="gameCanvas"></canvas>
         <div id="damageOverlay"></div>
         <img id="explosionGif" src="img/explosion.gif" style="display: none;" />
+        <div id="powerUpHUD"></div>
     </div>
     <div class="gameover-container" style="display: none;">
         <h1>GAME OVER</h1>
